// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`claim offer store should correctly calculate initial state 1`] = `
Object {
  "status": "IDLE",
}
`;

exports[`claim offer store should correctly calculate state after claim offer is received 1`] = `
Object {
  "status": "RECEIVED",
}
`;

exports[`claim offer store should correctly calculate state after claim offer is shown 1`] = `
Object {
  "status": "SHOWN",
}
`;
